# illu-rs

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md
.claude/skills/: illu-rs.md
.cursor/: mcp.json
.gemini/: settings.json
.github/workflows/: ci.yml
.illu/style/: project.json
.illu/style/decisions/: decision_2026_04_27_error_categories.json
assets/: axioms.json  model_failures.json  rust_quality_axioms.json  statusline.sh
assets/rust_exemplars/: manifest.json
assets/rust_exemplars/errors/: api_error.rs
assets/rust_exemplars/ownership/: cow_string.rs  drop_guard.rs
assets/rust_exemplars/perf/: closed_dispatch.rs
assets/rust_exemplars/types/: extension_trait.rs  sealed_trait.rs  typestate_builder.rs
assets/rust_exemplars/unsafe_ffi/: c_string_wrapper.rs  maybe_uninit_init.rs
benches/: indexing.rs
docs/: rust-playbook.md
docs/plans/: 2026-03-16-illu-rs-design.md  2026-03-16-illu-rs-implementation.md  2026-03-16-workspace-support.md  2026-03-19-correctness-tests.md  2026-03-19-polish-implementation.md  2026-03-19-testing-plan.md  2026-03-19-v2-enhancements-design.md  2026-03-19-v2-enhancements-implementation.md  2026-03-19-v3-accuracy-design.md  2026-03-19-v3-accuracy-implementation.md  2026-03-20-eight-more-improvements.md  2026-03-20-nine-improvements.md  2026-03-20-ten-improvements.md  2026-03-21-evaluation-fixes.md  2026-03-21-evaluation-improvements.md  2026-03-21-global-multi-repo-design.md  2026-03-21-global-multi-repo-plan.md  2026-03-21-illu-self-evaluation.md  2026-03-21-nine-improvements.md  2026-03-21-quality-improvements.md  2026-03-21-ref-extraction-fixes.md  2026-03-21-six-illu-fixes.md  2026-03-21-tool-quality-10-10.md  2026-03-24-test-suite-design.md
docs/specs/: 2026-03-16-workspace-support-design.md
docs/superpowers/plans/: 2026-03-16-enhanced-code-intelligence.md  2026-03-22-evaluation-bugfixes.md  2026-04-20-multi-agent-setup.md  2026-04-26-jon-style-rust-phase-0.md  2026-04-27-jon-style-rust-phase-1-ownership.md  2026-04-27-jon-style-rust-phase-1-performance.md  2026-04-27-jon-style-rust-phase-1-types.md  2026-04-27-jon-style-rust-phase-1-unsafe-ffi.md  2026-04-27-jon-style-rust-phase-2-exemplars.md  2026-04-27-jon-style-rust-phase-3-project-context.md  2026-04-27-jon-style-rust-phase-4-design-record.md  2026-04-27-jon-style-rust-phase-5-critique.md  2026-04-27-jon-style-rust-phase-6-cost-profile.md
docs/superpowers/specs/: 2026-03-16-enhanced-code-intelligence-design.md  2026-04-20-multi-agent-setup-design.md  2026-04-26-jon-style-rust-phase-0-design.md  2026-04-27-jon-style-rust-phase-1-ownership-design.md  2026-04-27-jon-style-rust-phase-1-performance-design.md  2026-04-27-jon-style-rust-phase-1-types-design.md  2026-04-27-jon-style-rust-phase-1-unsafe-ffi-design.md  2026-04-27-jon-style-rust-phase-2-exemplars-design.md  2026-04-27-jon-style-rust-phase-3-project-context-design.md  2026-04-27-jon-style-rust-phase-4-design-record-design.md  2026-04-27-jon-style-rust-phase-5-critique-design.md  2026-04-27-jon-style-rust-phase-6-cost-profile-design.md
extensions/statusline/: README.md  combined-statusline.sh  illu-statusline.sh
scripts/: README.md  distill_axioms.py
src/: api.rs  db.rs  error.rs  git.rs  lib.rs  main.rs  registry.rs  status.rs
src/agents/: agent_files.rs  allow_list.rs  detect.rs  formats.rs  instruction_md.rs  mod.rs  paths.rs  prompt.rs  selection.rs
src/indexer/: cargo_doc.rs  dependencies.rs  docs.rs  mod.rs  parser.rs  py_imports.rs  py_parser.rs  store.rs  tauri_bridge.rs  ts_imports.rs  ts_parser.rs  workspace.rs
src/ra/: client.rs  document.rs  error.rs  extensions.rs  lsp.rs  mod.rs  ops.rs  retry.rs  transport.rs  types.rs
src/server/: dashboard.html  dashboard.rs  mod.rs
src/server/tools/: axioms.rs  batch_context.rs  blame.rs  boundary.rs  callpath.rs  context.rs  crate_graph.rs  crate_impact.rs  critique.rs  cross_callpath.rs  cross_deps.rs  cross_impact.rs  cross_query.rs  decisions.rs  diff_impact.rs  doc_coverage.rs  docs.rs  exemplars.rs  file_graph.rs  freshness.rs  graph_export.rs  health.rs  history.rs  hotspots.rs  impact.rs  implements.rs  mod.rs  neighborhood.rs  orphaned.rs  overview.rs  project_style.rs  quality_gate.rs  query.rs  references.rs  rename_plan.rs  repos.rs  rust_preflight.rs  similar.rs  stats.rs  std_docs.rs  (+5 more)
tests/: agents_init.rs  agents_install.rs  ai_ux.rs  cross_repo.rs  cross_repo_correctness.rs  data_integrity.rs  data_quality.rs  error_paths.rs  graph_correctness.rs  incremental_correctness.rs  integration.rs  parser_correctness.rs  python_integration.rs  self_index.rs  typescript_integration.rs
tests/fixtures/illu_style_sample/.illu/style/: project.json
(+3 files in other folders)
