[package]
name = "illu-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tree-sitter = "0.26"
tree-sitter-rust = "0.23"
rusqlite = { version = "0.39", features = ["bundled"] }
reqwest = { version = "0.13", features = ["rustls", "json"] }
tokio = { version = "1", features = ["rt", "macros", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
module_name_repetitions = "allow"
similar_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
