[package]
name = "illu-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.2.0", features = ["server", "transport-io"] }
tree-sitter = "0.26"
tree-sitter-rust = "0.24.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
rusqlite = { version = "0.39", features = ["bundled"] }
reqwest = { version = "0.13.2", features = ["rustls", "json"] }
tokio = { version = "1.50.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "io-std",
    "time",
    "fs",
    "signal",
    "process",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
clap = { version = "4.6.0", features = ["derive"] }
dialoguer = { version = "0.11", default-features = false }
walkdir = "2.5.0"
regex-lite = "0.1.9"

# RA (rust-analyzer) integration
async-lsp = { version = "0.2", features = ["tokio"] }
lsp-types = "0.95"
tower = "0.4"
async-process = "2"
futures = "0.3"
url = "2"
thiserror = "2"
# Cross-platform canonicalize without Windows `\\?\` extended-length prefix,
# which some downstream MCP clients mishandle.
dunce = "1"

# Web dashboard (optional, gated behind `dashboard` feature)
axum = { version = "0.8", optional = true }
opener = { version = "0.7", optional = true }

[features]
default = ["dashboard"]
dashboard = ["dep:axum", "dep:opener"]

[dev-dependencies]
tempfile = "3.27.0"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "indexing"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
module_name_repetitions = "allow"
similar_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
